--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -1,44 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="250.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
    <children>
-      <TitledPane alignment="CENTER" collapsible="false" contentDisplay="CENTER" prefHeight="250.0" prefWidth="279.0" text="LOGIN" textAlignment="JUSTIFY" textFill="#656262">
-         <font>
-            <Font name="Lucida Sans Unicode" size="12.0" />
-         </font>
-         <content>
-            <AnchorPane prefHeight="248.0" prefWidth="277.0">
+      <AnchorPane layoutY="1.0">
+         <children>
+            <ImageView fitHeight="487.0" fitWidth="702.0" layoutX="-4.0" layoutY="2.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/suppermarket.jpg" />
+               </image>
+            </ImageView>
+            <AnchorPane layoutX="364.0" prefHeight="466.0" prefWidth="334.0" style="-fx-background-color: #3A6565;">
                <children>
-                  <TextField fx:id="usernameBtn" layoutX="37.0" layoutY="25.0" prefHeight="33.0" prefWidth="203.0" promptText="Username">
+                  <ImageView fitHeight="220.0" fitWidth="330.0" layoutX="1.0" layoutY="131.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/1_4.jpg" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="userName" layoutX="36.0" layoutY="181.0" prefHeight="50.0" prefWidth="264.0" promptText="Enter User Name" style="-fx-background-color: #133D3D;">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="Georgia Bold Italic" size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </TextField>
+                  <TextField fx:id="password" layoutX="35.0" layoutY="252.0" prefHeight="50.0" prefWidth="264.0" promptText="Enter Password" style="-fx-background-color: #133D3D;">
+                     <font>
+                        <Font name="Georgia Bold Italic" size="14.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="passwordBtn" layoutX="36.0" layoutY="69.0" prefHeight="33.0" prefWidth="205.0" promptText="Password">
+                  <Button fx:id="btnLogIn" contentDisplay="CENTER" layoutX="86.0" layoutY="330.0" mnemonicParsing="false" onAction="loginAccount" prefHeight="41.0" prefWidth="163.0" style="-fx-background-color: #133d3d#133d3d;" text="Login" textAlignment="JUSTIFY" textFill="WHITE" textOverrun="CLIP">
                      <font>
-                        <Font size="15.0" />
-                     </font>
-                  </TextField>
-                  <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="36.0" layoutY="111.0" prefHeight="30.0" prefWidth="203.0" text="Forgot Password?">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Hyperlink>
-                  <Button fx:id="signinBtn" layoutX="90.0" layoutY="151.0" mnemonicParsing="false" onAction="#signIn" prefHeight="32.0" prefWidth="98.0" text="Sign In">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="14.0" />
+                        <Font name="Georgia Bold Italic" size="14.0" />
                      </font>
                   </Button>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="91.0" layoutY="56.0" opacity="0.98" prefHeight="43.0" prefWidth="154.0" text="Sign in ">
+                     <font>
+                        <Font name="System Bold Italic" size="36.0" />
+                     </font>
+                     <textFill>
+                        <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
+                           <stops>
+                              <Stop color="#6fad84" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </textFill>
+                  </Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="22.0" prefHeight="27.0" prefWidth="120.0" text="Administrator" textAlignment="JUSTIFY">
+                     <font>
+                        <Font name="Gabriola" size="18.0" />
+                     </font>
+                     <textFill>
+                        <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
+                           <stops>
+                              <Stop color="#6fad84" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </textFill>
+                  </Label>
+                  <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="405.0" prefHeight="23.0" prefWidth="201.0" text="Forgot Password ?" textFill="#eee5e5">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                  </Hyperlink>
                </children>
             </AnchorPane>
-         </content>
-      </TitledPane>
+            <Label layoutX="27.0" layoutY="107.0" prefHeight="72.0" prefWidth="321.0" text="Welcome to Mama Ross !&#10;   suppermarket" textFill="#e8e8e8">
+               <font>
+                  <Font name="Georgia Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="27.0" layoutY="172.0" prefHeight="108.0" prefWidth="321.0" text="with mama ross Everything you need is Easy and fast no&#10;need for stress, get Anything you want just at your &#10;service , Sign up today!. " textFill="#ebe8e8">
+               <font>
+                  <Font name="System Italic" size="13.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnSignUp" contentDisplay="CENTER" layoutX="67.0" layoutY="298.0" mnemonicParsing="false" onAction="#createAccount" opacity="0.8" prefHeight="50.0" prefWidth="192.0" text="Sign up " textAlignment="JUSTIFY" textFill="#133d3d" textOverrun="CLIP">
+               <font>
+                  <Font name="Georgia Bold Italic" size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</Pane>
