--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -13,88 +13,84 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="700.0" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
    <children>
-      <AnchorPane layoutY="1.0">
+      <AnchorPane layoutY="1.0" prefHeight="310.0" prefWidth="700.0">
          <children>
-            <ImageView fitHeight="487.0" fitWidth="702.0" layoutX="-4.0" layoutY="2.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="318.0" fitWidth="351.0" layoutX="349.0" opacity="0.43" pickOnBounds="true">
                <image>
                   <Image url="@images/suppermarket.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="364.0" prefHeight="466.0" prefWidth="334.0" style="-fx-background-color: #3A6565;">
+            <AnchorPane layoutX="351.0" opacity="0.84" prefHeight="318.0" prefWidth="351.0" style="-fx-background-color: #000;">
                <children>
-                  <ImageView fitHeight="220.0" fitWidth="330.0" layoutX="1.0" layoutY="131.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="44.0" fitWidth="48.0" layoutX="294.0" layoutY="270.0" pickOnBounds="true">
                      <image>
-                        <Image url="@images/1_4.jpg" />
+                        <Image url="@images/dic.png" />
                      </image>
                   </ImageView>
-                  <TextField fx:id="userName" layoutX="36.0" layoutY="181.0" prefHeight="50.0" prefWidth="264.0" promptText="Enter User Name" style="-fx-background-color: #133D3D;">
+               </children></AnchorPane>
+            <Label layoutX="388.0" layoutY="89.0" prefHeight="142.0" prefWidth="301.0" text="with mama ross Everything you need is Easy and fast no&#10;need for stress, get Anything you want just at your &#10;service , start shopping  today! " textFill="#ebe8e8">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="368.0" layoutY="29.0" prefHeight="72.0" prefWidth="301.0" text="Welcome to Mama Ross !&#10;   suppermarket" textFill="#e8e8e8">
+               <font>
+                  <Font name="Georgia Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <AnchorPane layoutY="-1.0" opacity="0.9" prefHeight="318.0" prefWidth="351.0" style="-fx-background-color: #000;">
+               <children>
+                  <TextField fx:id="userName" layoutX="30.0" layoutY="110.0" prefHeight="44.0" prefWidth="272.0" promptText="Enter User Name" style="-fx-background-color: #fff;">
                      <font>
-                        <Font name="Georgia Bold Italic" size="14.0" />
+                        <Font name="Georgia" size="12.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
+                     <padding>
+                        <Insets left="27.0" />
+                     </padding>
                   </TextField>
-                  <TextField fx:id="password" layoutX="35.0" layoutY="252.0" prefHeight="50.0" prefWidth="264.0" promptText="Enter Password" style="-fx-background-color: #133D3D;">
+                  <TextField fx:id="password" accessibleRole="TEXT" layoutX="31.0" layoutY="172.0" opacity="0.99" prefHeight="44.0" prefWidth="272.0" promptText="Enter Password" style="-fx-background-color: #fff;">
                      <font>
-                        <Font name="Georgia Bold Italic" size="14.0" />
+                        <Font name="Georgia" size="12.0" />
                      </font>
+                     <padding>
+                        <Insets left="27.0" />
+                     </padding>
                   </TextField>
-                  <Button fx:id="btnLogIn" contentDisplay="CENTER" layoutX="86.0" layoutY="330.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="41.0" prefWidth="163.0" style="-fx-background-color: #133d3d#133d3d;" text="Login" textAlignment="JUSTIFY" textFill="WHITE" textOverrun="CLIP">
+                  <Button fx:id="btnLogIn" contentDisplay="CENTER" layoutX="31.0" layoutY="239.0" mnemonicParsing="false" onAction="#loginAccount" opacity="0.95" prefHeight="44.0" prefWidth="104.0" style="-fx-background-color: #fff;" text="Login" textAlignment="JUSTIFY" textFill="#020529" textOverrun="CLIP">
                      <font>
                         <Font name="Georgia Bold Italic" size="14.0" />
                      </font>
                   </Button>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="91.0" layoutY="56.0" opacity="0.98" prefHeight="43.0" prefWidth="154.0" text="Sign in ">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="82.0" layoutY="35.0" opacity="0.98" prefHeight="43.0" prefWidth="154.0" text="Sign in ">
                      <font>
                         <Font name="System Bold Italic" size="36.0" />
                      </font>
                      <textFill>
                         <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
                            <stops>
-                              <Stop color="#6fad84" />
-                              <Stop color="WHITE" offset="1.0" />
+                              <Stop color="#e0e1ee" />
+                              <Stop color="#020529" offset="1.0" />
                            </stops>
                         </LinearGradient>
                      </textFill>
                   </Label>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="22.0" prefHeight="27.0" prefWidth="120.0" text="Administrator" textAlignment="JUSTIFY">
-                     <font>
-                        <Font name="Gabriola" size="18.0" />
-                     </font>
-                     <textFill>
-                        <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
-                           <stops>
-                              <Stop color="#6fad84" />
-                              <Stop color="WHITE" offset="1.0" />
-                           </stops>
-                        </LinearGradient>
-                     </textFill>
-                  </Label>
-                  <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="405.0" prefHeight="23.0" prefWidth="201.0" text="Forgot Password ?" textFill="#eee5e5">
-                     <font>
-                        <Font name="System Italic" size="13.0" />
-                     </font>
-                  </Hyperlink>
+                  <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="33.0" layoutY="122.0" opacity="0.49" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="35.0" layoutY="183.0" opacity="0.59" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/pass.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="27.0" layoutY="107.0" prefHeight="72.0" prefWidth="321.0" text="Welcome to Mama Ross !&#10;   suppermarket" textFill="#e8e8e8">
-               <font>
-                  <Font name="Georgia Bold Italic" size="24.0" />
-               </font>
-            </Label>
-            <Label layoutX="27.0" layoutY="172.0" prefHeight="108.0" prefWidth="321.0" text="with mama ross Everything you need is Easy and fast no&#10;need for stress, get Anything you want just at your &#10;service , Sign up today!. " textFill="#ebe8e8">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-            </Label>
-            <Button fx:id="btnSignUp" contentDisplay="CENTER" layoutX="67.0" layoutY="298.0" mnemonicParsing="false" onAction="#createAccount" opacity="0.8" prefHeight="50.0" prefWidth="192.0" text="Sign up " textAlignment="JUSTIFY" textFill="#133d3d" textOverrun="CLIP">
-               <font>
-                  <Font name="Georgia Bold Italic" size="14.0" />
-               </font>
-            </Button>
          </children>
       </AnchorPane>
    </children>
