Add Accordion pane

--- a/src/com/pos/org/view/dashboard.fxml
+++ b/src/com/pos/org/view/dashboard.fxml
@@ -2,8 +2,10 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,9 +15,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="800.0" prefWidth="222.0" style="-fx-background-color: #020529;">
+      <VBox prefHeight="800.0" prefWidth="215.0" style="-fx-background-color: #020529;">
          <children>
-            <ImageView fitHeight="100.0" fitWidth="214.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="68.0" fitWidth="212.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../Assets/images/CharityBuy%20Logo%20200x100.png" />
                </image>
@@ -24,122 +26,152 @@
                </VBox.margin>
             </ImageView>
             <Separator opacity="0.22" prefWidth="200.0" />
-            <HBox prefHeight="34.0" prefWidth="222.0">
-               <children>
-                  <FontAwesomeIconView fill="#f58a08" glyphName="HOME" size="20" wrappingWidth="33.0">
-                     <HBox.margin>
-                        <Insets top="7.0" />
-                     </HBox.margin></FontAwesomeIconView>
-                  <Hyperlink fx:id="dashboardLink" onAction="#viewDashBoard" prefHeight="18.0" prefWidth="83.0" text="Dashboard" textFill="#f2efef">
+            <Accordion>
+              <panes>
+                <TitledPane animated="false" prefHeight="0.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Dashboard" textFill="#f2efef">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f58a08" glyphName="HOME" size="20" wrappingWidth="31.0" />
+                     </graphic>
                      <font>
-                        <Font name="Lucida Sans Regular" size="14.0" />
+                        <Font size="14.0" />
                      </font>
                      <padding>
-                        <Insets left="7.0" top="7.0" />
+                        <Insets bottom="10.0" />
                      </padding>
-                     <HBox.margin>
-                        <Insets bottom="15.0" />
-                     </HBox.margin>
-                  </Hyperlink>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
+                </TitledPane>
+                  <TitledPane animated="false" layoutX="10.0" layoutY="10.0" prefHeight="0.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Sales" textFill="#f2efef">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     </content>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f58a08" glyphName="SHOPPING_CART" size="20" wrappingWidth="31.0" />
+                     </graphic>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TitledPane>
+                  <TitledPane animated="false" layoutX="10.0" layoutY="70.0" prefHeight="0.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Inventory" textFill="#f2efef">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     </content>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f58a08" glyphName="LIST_OL" size="20" wrappingWidth="31.0" />
+                     </graphic>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TitledPane>
+                  <TitledPane layoutX="10.0" layoutY="220.0" prefHeight="492.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Account" textFill="#f2efef">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="118.0" prefWidth="222.0" style="-fx-background-color: #020529;">
+                           <children>
+                              <VBox layoutX="47.0" prefHeight="120.0" prefWidth="125.0" style="-fx-background-color: #020529;">
+                                 <children>
+                                    <HBox prefHeight="29.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                       <children>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0">
+                                             <HBox.margin>
+                                                <Insets top="7.0" />
+                                             </HBox.margin>
+                                          </FontAwesomeIconView>
+                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="New Attendant" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox layoutX="10.0" layoutY="10.0" prefHeight="29.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                       <children>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0">
+                                             <HBox.margin>
+                                                <Insets top="7.0" />
+                                             </HBox.margin>
+                                          </FontAwesomeIconView>
+                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="Edit Attendant" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox layoutX="10.0" layoutY="40.0" prefHeight="29.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                       <children>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0">
+                                             <HBox.margin>
+                                                <Insets top="7.0" />
+                                             </HBox.margin>
+                                          </FontAwesomeIconView>
+                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="Attendant Enqiry" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f58a08" glyphName="USERS" size="20" wrappingWidth="31.0" />
+                     </graphic>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TitledPane>
+                  <TitledPane layoutX="10.0" layoutY="251.0" prefHeight="0.0" prefWidth="215.0" style="-fx-background-color: #020529;" styleClass="accordion" stylesheets="@style.css" text="Organization" textFill="#f2efef">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="118.0" prefWidth="234.0" style="-fx-background-color: #020529;">
+                           <children>
+                              <VBox layoutX="43.0" layoutY="-2.0" prefHeight="120.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                 <children>
+                                    <HBox prefHeight="29.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                       <children>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0">
+                                             <HBox.margin>
+                                                <Insets top="8.0" />
+                                             </HBox.margin>
+                                          </FontAwesomeIconView>
+                                          <Hyperlink text="Edit" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox layoutX="10.0" layoutY="10.0" prefHeight="29.0" prefWidth="172.0" style="-fx-background-color: #020529;">
+                                       <children>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0">
+                                             <HBox.margin>
+                                                <Insets top="8.0" />
+                                             </HBox.margin>
+                                          </FontAwesomeIconView>
+                                          <Hyperlink text="Enquiry" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f58a08" glyphName="BUILDING_ALT" size="20" wrappingWidth="31.0" />
+                     </graphic>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TitledPane>
+              </panes>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="40.0" />
                </VBox.margin>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="133.0" prefHeight="34.0" prefWidth="222.0">
-               <children>
-                  <FontAwesomeIconView fill="#f58a08" glyphName="SHOPPING_CART" size="20" wrappingWidth="31.0">
-                     <HBox.margin>
-                        <Insets top="7.0" />
-                     </HBox.margin></FontAwesomeIconView>
-                  <Hyperlink fx:id="salesLink" onAction="#viewSales" text="Sales" textFill="#f2efef">
-                     <font>
-                        <Font name="Lucida Sans Regular" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="7.0" top="7.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="15.0" />
-                     </HBox.margin>
-                  </Hyperlink>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="167.0" prefHeight="34.0" prefWidth="222.0">
-               <children>
-                  <FontAwesomeIconView fill="#f58a08" glyphName="LIST_OL" size="20" wrappingWidth="31.0">
-                     <HBox.margin>
-                        <Insets top="7.0" />
-                     </HBox.margin></FontAwesomeIconView>
-                  <Hyperlink fx:id="inventoryLink" onAction="#viewInventory" text="Inventory" textFill="#f2efef">
-                     <font>
-                        <Font name="Lucida Sans Regular" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="7.0" top="7.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="15.0" />
-                     </HBox.margin>
-                  </Hyperlink>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="201.0" prefHeight="34.0" prefWidth="222.0">
-               <children>
-                  <FontAwesomeIconView fill="#f58a08" glyphName="USERS" size="20" wrappingWidth="31.0">
-                     <HBox.margin>
-                        <Insets top="7.0" />
-                     </HBox.margin></FontAwesomeIconView>
-                  <Hyperlink fx:id="accountLink" onAction="#viewAccount" text="Account" textFill="#f2efef">
-                     <font>
-                        <Font name="Lucida Sans Regular" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="7.0" top="7.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="10.0" />
-                     </HBox.margin>
-                  </Hyperlink>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="259.0" prefHeight="34.0" prefWidth="222.0">
-               <children>
-                  <FontAwesomeIconView fill="#f58a08" glyphName="BUILDING_ALT" size="20" wrappingWidth="31.0">
-                     <HBox.margin>
-                        <Insets top="7.0" />
-                     </HBox.margin>
-                  </FontAwesomeIconView>
-                  <Hyperlink fx:id="accountLink1" onAction="#viewAccount" text="Organization" textFill="#f2efef">
-                     <font>
-                        <Font name="Lucida Sans Regular" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="7.0" top="7.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets bottom="10.0" />
-                     </HBox.margin>
-                  </Hyperlink>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
+            </Accordion>
          </children>
       </VBox>
-      <HBox layoutX="222.0" prefHeight="100.0" prefWidth="1058.0" style="-fx-background-color: #f9f9f9;" />
+      <HBox layoutX="216.0" prefHeight="68.0" prefWidth="1058.0" style="-fx-background-color: #f9f9f9;" />
    </children>
 </AnchorPane>
