--- a/src/com/pos/org/view/dashboard.fxml
+++ b/src/com/pos/org/view/dashboard.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DashboardCtrl">
    <children>
       <VBox prefHeight="800.0" prefWidth="215.0" style="-fx-background-color: #020529;">
          <children>
@@ -77,7 +77,7 @@
                                                 <Insets top="7.0" />
                                              </HBox.margin>
                                           </FontAwesomeIconView>
-                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="New Attendant" />
+                                          <Hyperlink onAction="#createNewAttendant" prefHeight="25.0" prefWidth="139.0" text="New Attendant" />
                                        </children>
                                        <padding>
                                           <Insets top="5.0" />
@@ -90,7 +90,7 @@
                                                 <Insets top="7.0" />
                                              </HBox.margin>
                                           </FontAwesomeIconView>
-                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="Edit Attendant" />
+                                          <Hyperlink onAction="#editAttendant" prefHeight="25.0" prefWidth="139.0" text="Edit Attendant" />
                                        </children>
                                        <padding>
                                           <Insets top="5.0" />
@@ -103,7 +103,7 @@
                                                 <Insets top="7.0" />
                                              </HBox.margin>
                                           </FontAwesomeIconView>
-                                          <Hyperlink prefHeight="25.0" prefWidth="139.0" text="Attendant Enqiry" />
+                                          <Hyperlink onAction="#viewAttendant" prefHeight="25.0" prefWidth="139.0" text="Attendant Enqiry" />
                                        </children>
                                        <padding>
                                           <Insets top="5.0" />
@@ -134,7 +134,7 @@
                                                 <Insets top="8.0" />
                                              </HBox.margin>
                                           </FontAwesomeIconView>
-                                          <Hyperlink text="Edit" />
+                                          <Hyperlink onAction="#editOrganizationDtls" text="Edit" />
                                        </children>
                                        <padding>
                                           <Insets top="5.0" />
@@ -147,7 +147,7 @@
                                                 <Insets top="8.0" />
                                              </HBox.margin>
                                           </FontAwesomeIconView>
-                                          <Hyperlink text="Enquiry" />
+                                          <Hyperlink onAction="#viewOrganizationDtls" text="Enquiry" />
                                        </children>
                                        <padding>
                                           <Insets top="5.0" />
