--- a/src/com/pos/org/view/dashboard.fxml
+++ b/src/com/pos/org/view/dashboard.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DashboardCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.org.controller.DashboardCtrl">
    <children>
       <VBox prefHeight="800.0" prefWidth="215.0" style="-fx-background-color: #020529;">
          <children>
@@ -173,5 +173,6 @@
          </children>
       </VBox>
       <HBox layoutX="216.0" prefHeight="68.0" prefWidth="1058.0" style="-fx-background-color: #f9f9f9;" />
+      <AnchorPane fx:id="mainPane" layoutX="216.0" layoutY="68.0" prefHeight="736.0" prefWidth="1066.0" />
    </children>
 </AnchorPane>
