--- a/src/com/pos/account/view/Confirmation.fxml
+++ b/src/com/pos/account/view/Confirmation.fxml
@@ -6,37 +6,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="520.0" prefWidth="500.0" style="-fx-background-color: #020529;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane prefHeight="520.0" prefWidth="500.0" style="-fx-background-color: #020529;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.ConfirmationCtrl">
    <children>
-      <ImageView fitHeight="228.0" fitWidth="232.0" layoutX="134.0" layoutY="23.0" pickOnBounds="true">
+      <ImageView fitHeight="228.0" fitWidth="232.0" layoutX="131.0" layoutY="67.0" pickOnBounds="true">
          <image>
-            <Image url="@images/sucess1.png" />
+            <Image url="@../../../../../Assets/images/sucess1.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="87.0" layoutY="255.0" prefHeight="52.0" prefWidth="339.0" text="Sucessful !" textFill="WHITE">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="87.0" layoutY="310.0" prefHeight="52.0" prefWidth="339.0" text="Sucessful !" textFill="WHITE">
          <font>
             <Font name="Arial Bold Italic" size="37.0" />
          </font>
       </Label>
-      <Label layoutX="86.0" layoutY="375.0" prefHeight="34.0" prefWidth="103.0" text="User name :" textFill="WHITE">
+      <Label layoutX="86.0" layoutY="381.0" prefHeight="34.0" prefWidth="103.0" text="User name :" textFill="#020529">
          <font>
             <Font name="Georgia Italic" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="86.0" layoutY="419.0" prefHeight="34.0" prefWidth="93.0" text="Password :" textFill="WHITE">
+      <Label layoutX="86.0" layoutY="419.0" prefHeight="34.0" prefWidth="93.0" text="Password :" textFill="#020529">
          <font>
             <Font name="Georgia Italic" size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="userName" layoutX="207.0" layoutY="376.0" prefHeight="34.0" prefWidth="177.0" text="null" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="password" layoutX="205.0" layoutY="420.0" prefHeight="34.0" prefWidth="195.0" text="null" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="16.0" />
          </font>
       </Label>
       <Label layoutX="345.0" layoutY="480.0" prefHeight="26.0" prefWidth="149.0" text="please login to continue" textFill="WHITE">
